--- a/oratoriogarelli/src/index.css
+++ b/oratoriogarelli/src/index.css
@@ -22,7 +22,8 @@ code {
 
 *{
   font-family: 'Montserrat', sans-serif;
+  /* background-color: #FAF9F6 */
 }
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
